Double the PermGen size from 80 MB to 160 MB - avoid test failures